test/type-error-2.err.expect
test/type-error-2.ktn:3:1: error: cannot solve scalar type constraint [t1] (output of __add_vector) = Int (output of baz)
test/type-error-2.ktn:3:9: note: Int (output of baz) is from here
test/type-error-2.ktn:4:12: note: [t1] (output of __add_vector) is from here
