test/type-error-2.ktn
// TODO(strager): Improve error reporting.

def baz ([a] [Char] -> Int):
  ->x; [x] __add_vector
